k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ms-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /app/static/config.json
              subPath: config.json
            - name: keycloak-volume
              mountPath: /app/static/keycloak.json
              subPath: keycloak.json
      volumes:
        - name: config-volume
          configMap:
            name: frontend-config
        - name: keycloak-volume
          configMap:
            name: frontend-keycloak
