k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 8080        # Kubernetes external port
      targetPort: 3000  # Container’s internal port
      nodePort: 30080   # Minikube / external NodePort
