k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
