k8s/loader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loader
spec:
  selector:
    app: loader
  ports:
    - port: 8080
      targetPort: 8080
