k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
spec:
  type: LoadBalancer
  selector:
    app: nginx-proxy
  ports:
    - port: 80
      targetPort: 80
